docs: rewrite quick start; test: remove self-deceiving tests; chore: comment hygiene
Docs (README/README_zh + docs/*):
- Rewrite Quick Start around the KBWebView-vs-KBPage split; verify every
  snippet against actual API signatures (suspend semantics, runBlocking
  context, Window import, kbhtml:// scope, Gradle daemon JBR pitfall)
- Remove stale font-paths plugin docs (plugin deleted from buildSrc)
- Fix demo page count (6 -> 7), correct OSR overlay event claims to match
  the demo's working floating-card example, deduplicate getRawAxTree
  references (now internal), bump dependency example to 0.1.0-alpha46

Tests (17 files -> 6):
- Delete 11 tests that always exit 0 (dump tools, interactive JFrame
  scripts, live-site repros, print-only smokes) plus their resources
- Keep 6 real integration tests; add failure exit codes to KBDebugTest,
  NonOsrResizeTest, ResizeFollowTest; consolidate 16 copy-pasted JavaExec
  tasks into a registerKBrowserTest helper

Code comments:
- Strip AI-flavored narration/banners/self-justification across all
  sources; keep API/usage docs as English KDoc; retain why-comments only
  for real constraints (SIGSEGV ordering, interop event pass-through,
  JBR reflection, EDT/thread affinity)
- Remove unused KMP template Greeting.kt/GreetingUtil.kt